
161221 Martin Mann :
 * RnaSequence : 
   * SequenceAlphabet += tT
   * getUpperCase() : 
     * replacement of 'T' with 'G'

161219 Martin Mann :
 * src/Makefile :
   * bin file name changed to "IntaRNA"
 * .travis : bin file name changed
 + perl/IntaRNA-1ui.pl : wrapper to enable IntaRNA v1 like parameter usage
 * OutputConstraint :
   + maxE : maximal energy to be reported
 * CommandLineParsing :
   + outMaxE + validator : argument for maximal energy of reported interactions
 * PredictorMfe :
   * initOptima() : initializes with OutputConstraint.maxE
   * reportOptima() : ensures energy is below OutputConstraint.maxE
 * .gitignore : 
   + .* : all hidden files ignored
 + perl/Makefile.am
   + perl wrapper packaging and install
 * configure.ac : 
   + perl/Makefile

161216 Martin Mann :
 * README.md
   + feature comparison table started
 + configure.ac :
   * -fopenmp now always added to CXXFLAGS (also if VRNA path not specified)
 + OutputHandlerIntaRNA1detailed : output similar to IntaRNA v1.2.*
 * CommandLineParsing :
   * getOutputHandler() :
     + temporarily : init output of IntaRNA 1.* mode
     * temporarily : IntaRNA 1 output
   + getOutputStream() : stream to be passed to OutputHandler instances

161215 Martin Mann :
 * AccessibilityConstraint :
   * construction : bugfix reverse handling
 * CommandLineParsing : 
   * getSeedConstraint()
     + now with energy argument arguments to access seed lengths
     + reverses seed ranges for seq2
 * IndexRangeList :
   * List now std::list (before std::vector)
   + covers(range) + tests
   + reverse() + tests : reverses the indices and range order
 * PredictorMfe2d :
 * PredictorMfe2dSeed :
   * predict() : bugfix : throw without "new"
 * Predictor*Seed :
   * bugfix : uses now SeedHandlerIdxOffset instead of SeedHandler
   + seed handler offset setup
 * RnaSequence :
   * areComplementary() : bugfix : throw without "new"
 * SeedConstraint :
   * members not const (otherwise getter not needed)