@@ -64,10 +64,11 @@ void
 PredictorMfe::
 updateOptima( const size_t i1, const size_t j1
 		, const size_t i2, const size_t j2
-		, const E_type hybridE )
+		, const E_type interE
+		, const bool isHybridE )
 {
 //	LOG(DEBUG) <<"energy( "<<i1<<"-"<<j1<<", "<<i2<<"-"<<j2<<" ) = "
-//			<<hybridE;
+//			<<interE;
 
 	// check if nothing to be done
 	if (mfeInteractions.size() == 0) {
@@ -75,14 +76,14 @@ updateOptima( const size_t i1, const size_t j1
 	}
 
 	// get final energy of current interaction
-	E_type curE = energy.getE( i1,j1, i2,j2, hybridE );
+	E_type curE = isHybridE ? energy.getE( i1,j1, i2,j2, interE ) : interE;
 //	LOG(DEBUG) <<"energy( "<<i1<<"-"<<j1<<", "<<i2<<"-"<<j2<<" ) = "
-//			<<hybridE <<" : total = "<<curE;
+//			<<interE <<" : total = "<<curE;
 
 	if (mfeInteractions.size() == 1) {
 		if (curE < mfeInteractions.begin()->energy) {
 	//		LOG(DEBUG) <<"PredictorMfe::updateOptima() : new mfe ( "
-	//			<<i1<<"-"<<j1<<", "<<i2<<"-"<<j2<<" ) = " <<hybridE <<" : "<<curE;
+	//			<<i1<<"-"<<j1<<", "<<i2<<"-"<<j2<<" ) = " <<interE <<" : "<<curE;
 			// store new global min
 			mfeInteractions.begin()->energy = (curE);
 			// store interaction boundaries
