@@ -106,13 +106,15 @@ protected:
 	 * @param j1 the index of the first sequence interacting with j2
 	 * @param i2 the index of the second sequence interacting with i1
 	 * @param j2 the index of the second sequence interacting with j1
-	 * @param hybridE ignored
+	 * @param energy ignored
+	 * @param isHybridE ignored
 	 */
 	virtual
 	void
 	updateOptima( const size_t i1, const size_t j1
 			, const size_t i2, const size_t j2
-			, const E_type energy );
+			, const E_type energy
+			, const bool isHybridE );
 
 	/**
 	 * Computes all entries of the hybridE_seed matrix for interactions ending in
